--- a/src/usage.adoc
+++ b/src/usage.adoc
@@ -7,7 +7,22 @@ babashka.
 
 [source,bash]
 ----
-Babashka v0.3.1
+Babashka v0.3.1-SNAPSHOT
+
+Usage: bb [classpath opts] [eval opts] [cmdline args]
+or:    bb [classpath opts] file [cmdline args]
+or:    bb [classpath opts] subcommand [subcommand opts] [cmdline args]
+
+Classpath:
+
+  -cp, --classpath     Classpath to use.
+
+Evaluation:
+
+  -e, --eval <expr>    Evaluate an expression.
+  -f, --file <path>    Evaluate a file.
+  -m, --main <ns|var>  Call the -main function from a namespace or call a fully qualified var.
+  --verbose            Print debug information and entire stacktrace in case of exception.
 
 Help:
 
@@ -16,22 +31,11 @@ Help:
   describe           Print an EDN map with information about this version of babashka.
   doc <var|ns>       Print docstring of var or namespace. Requires namespace if necessary.
 
-Evaluation:
-
-  -e, --eval <expr>    Evaluate an expression.
-  -f, --file <path>    Evaluate a file.
-  -cp, --classpath     Classpath to use.
-  -m, --main <ns|var>  Call the -main function from a namespace or call a fully qualified var.
-  --verbose            Print debug information and entire stacktrace in case of exception.
-
 REPL:
 
-  Usage: <repl-command> [port/host] [classpath-opt]
-  Specify port (e.g. 1666) or host and port separated by colon (e.g. 127.0.0.1:1666).
-
-  repl               Start REPL. Use rlwrap for history. When invoking bb with no args, this is the default command.
-  socket-repl        Start socket REPL.
-  nrepl-server       Start nREPL server.
+  repl                 Start REPL. Use rlwrap for history.
+  socket-repl  [addr]  Start a socket REPL. Addr opt defaults to localhost:1666.
+  nrepl-server [addr]  Start nREPL server. Address option defaults to locahost:1667.
 
 Clojure:
 
@@ -39,11 +43,10 @@ Clojure:
 
 Packaging:
 
-  uberscript <file> [eval-opts]  Collect preloads, -e, -f and -m and all required namespaces from the classpath into a single file.
+  uberscript <file> [eval-opt]  Collect all required namespaces from the classpath into a single file. Accepts additional eval opts, like `-m`.
+  uberjar    <jar>  [eval-opt]  Similar to uberscript but creates jar file.
 
-  uberjar    <jar> [eval-opts]   Similar to --uberscript but creates jar file.
-
-In- and output flags (to be used with -e on the command line):
+In- and output flags (only to be used with -e one-liners):
 
   -i                 Bind *input* to a lazy seq of lines from stdin.
   -I                 Bind *input* to a lazy seq of EDN values from stdin.
@@ -51,10 +54,10 @@ In- and output flags (to be used with -e on the command line):
   -O                 Write EDN values to stdout.
   --stream           Stream over lines or EDN values from stdin. Combined with -i or -I *input* becomes a single value per iteration.
 
-If the first argument is not any of the above options, then it treated as a file if it exists, or as an expression otherwise.
-Everything after that is bound to *command-line-args*.
-
+File names take precedence over subcommand names.
+Remaining arguments are bound to *command-line-args*.
 Use -- to separate script command line args from bb command line args.
+When no eval opts or subcommand is provided, the implicit subcommand is repl.
 ----
 
 === Running a script
@@ -239,7 +242,7 @@ in the classpath and start a socket REPL by running:
 
 [source,bash]
 ----
-$ bb socket-repl 1666 --classpath src:test
+$ bb --classpath src:test socket-repl 1666
 ----
 
 If there is no `--classpath` argument, the `BABASHKA_CLASSPATH` environment
@@ -336,7 +339,7 @@ Producing an uberscript with all required code:
 
 [source,bash]
 ----
-$ bb -f glob.clj --uberscript glob-uberscript.clj
+$ bb uberscript glob-uberscript.clj -f glob.clj
 ----
 
 To prove that we don't need the classpath anymore:
@@ -394,7 +397,7 @@ main method:
 ----
 $ cat src/foo.clj
 (ns foo (:gen-class)) (defn -main [& args] (prn :hello))
-$ bb -cp $(clojure -Spath) -m foo --uberjar foo.jar
+$ bb -cp $(clojure -Spath) uberjar foo.jar -m foo
 $ bb foo.jar
 :hello
 ----
@@ -423,7 +426,7 @@ To exclude these dependencies, you can use the following
 [source,clojure]
 ----
 $ rm foo.jar
-$ bb -cp $(clojure -A:remove-clojure -Spath) -m foo --uberjar foo.jar
+$ bb -cp $(clojure -A:remove-clojure -Spath) uberjar foo.jar -m foo
 $ bb foo.jar
 :hello
 $ ls -lh foo.jar
@@ -440,7 +443,7 @@ $ rm foo.jar
 $ mkdir classes
 $ clojure -e "(require 'foo) (compile 'foo)"
 foo
-$ bb -cp $(clojure -Spath):classes -m foo --uberjar foo.jar
+$ bb -cp $(clojure -Spath):classes uberjar foo.jar -m foo
 $ bb foo.jar
 :hello
 $ java -jar foo.jar
@@ -463,7 +466,7 @@ symbols to functions or vars:
 
 [source,clojure]
 ----
-$ bb "(set! *data-readers* {'t/tag inc}) #t/tag 1"
+$ bb -e "(set! *data-readers* {'t/tag inc}) #t/tag 1"
 2
 ----
 
@@ -479,13 +482,13 @@ ignored.
 
 [source,clojure]
 ----
-$ bb "#?(:bb :hello :clj :bye)"
+$ bb -e "#?(:bb :hello :clj :bye)"
 :hello
 
-$ bb "#?(:clj :bye :bb :hello)"
+$ bb -e "#?(:clj :bye :bb :hello)"
 :bye
 
-$ bb "[1 2 #?@(:bb [] :clj [1])]"
+$ bb -e "[1 2 #?@(:bb [] :clj [1])]"
 [1 2]
 ----
 
@@ -496,7 +499,7 @@ Babashka bundles https://github.com/borkdude/deps.clj[deps.clj] for invoking a
 
 [source,clojure]
 ----
-$ bb --clojure -M -e "*clojure-version*"
+$ bb clojure -M -e "*clojure-version*"
 {:major 1, :minor 10, :incremental 1, :qualifier nil}
 ----
 
