--- a/src/usage/repl.adoc
+++ b/src/usage/repl.adoc
@@ -9,14 +9,14 @@ To start a REPL, type:
 
 [source,shell]
 ----
-$ bb --repl
+$ bb repl
 ----
 
 To get history with up and down arrows, use https://github.com/hanslub42/rlwrap[rlwrap]:
 
 [source,shell]
 ----
-$ rlwrap bb --repl
+$ rlwrap bb repl
 ----
 
 ==== Socket REPL
@@ -25,7 +25,7 @@ To start a socket REPL on port `1666`:
 
 [source,shell]
 ----
-$ bb --socket-repl 1666
+$ bb socket-repl 1666
 Babashka socket REPL started at localhost:1666
 ----
 
@@ -49,7 +49,7 @@ Java property option in Clojure:
 
 [source,clojure]
 ----
-$ bb --socket-repl '{:address "0.0.0.0" :accept clojure.core.server/repl :port 1666}'
+$ bb socket-repl '{:address "0.0.0.0" :accept clojure.core.server/repl :port 1666}'
 ----
 
 Editor plugins and tools known to work with a babashka socket REPL:
@@ -77,7 +77,7 @@ Launching a prepl can be done as follows:
 
 [source,clojure]
 ----
-$ bb --socket-repl '{:address "0.0.0.0" :accept clojure.core.server/io-prepl :port 1666}'
+$ bb socket-repl '{:address "0.0.0.0" :accept clojure.core.server/io-prepl :port 1666}'
 ----
 
 or programmatically:
@@ -95,7 +95,7 @@ To start an nREPL server:
 
 [source,shell]
 ----
-$ bb --nrepl-server 1667
+$ bb nrepl-server 1667
 ----
 
 Then connect with your favorite nREPL client:
@@ -152,7 +152,7 @@ To debug the nREPL server from the binary you can run:
 
 [source,shell]
 ----
-$ BABASHKA_DEV=true bb --nrepl-server 1667
+$ BABASHKA_DEV=true bb nrepl-server 1667
 ----
 
 This will print all the incoming messages.
