--- a/src/libraries.adoc
+++ b/src/libraries.adoc
@@ -61,6 +61,11 @@ as `transit`
   - `clojure.test.check`
   - `clojure.test.check.generators`
   - `clojure.test.check.properties`
+* https://github.com/clj-commons/rewrite-clj[rewrite-clj]:
+ - `rewrite-clj.parser`
+ - `rewrite-clj.node`
+ - `rewrite-clj.zip`
+ - `rewrite-clj.paredit`
 
 See the
 https://github.com/borkdude/babashka/blob/master/doc/projects.md[projects]
