--- a/src/usage.adoc
+++ b/src/usage.adoc
@@ -5,58 +5,7 @@ Typing `bb help` from the command line will print all the available command
 line options which should give you a sense of the available features in
 babashka.
 
-[source,bash]
-----
-Usage: bb [classpath opts] [eval opts] [cmdline args]
-or:    bb [classpath opts] file [cmdline args]
-or:    bb [classpath opts] subcommand [subcommand opts] [cmdline args]
-
-Classpath:
-
-  -cp, --classpath     Classpath to use. Overrides bb.edn classpath.
-
-Evaluation:
-
-  -e, --eval <expr>    Evaluate an expression.
-  -f, --file <path>    Evaluate a file.
-  -m, --main <ns|var>  Call the -main function from a namespace or call a fully qualified var.
-  --verbose            Print debug information and entire stacktrace in case of exception.
-
-Help:
-
-  help, -h or -?     Print this help text.
-  version            Print the current version of babashka.
-  describe           Print an EDN map with information about this version of babashka.
-  doc <var|ns>       Print docstring of var or namespace. Requires namespace if necessary.
-
-REPL:
-
-  repl                 Start REPL. Use rlwrap for history.
-  socket-repl  [addr]  Start a socket REPL. Address defaults to localhost:1666.
-  nrepl-server [addr]  Start nREPL server. Address defaults to localhost:1667.
-
-Clojure:
-
-  clojure [args...]  Invokes clojure. Takes same args as the official clojure CLI.
-
-Packaging:
-
-  uberscript <file> [eval-opt]  Collect all required namespaces from the classpath into a single file. Accepts additional eval opts, like `-m`.
-  uberjar    <jar>  [eval-opt]  Similar to uberscript but creates jar file.
-
-In- and output flags (only to be used with -e one-liners):
-
-  -i                 Bind *input* to a lazy seq of lines from stdin.
-  -I                 Bind *input* to a lazy seq of EDN values from stdin.
-  -o                 Write lines to stdout.
-  -O                 Write EDN values to stdout.
-  --stream           Stream over lines or EDN values from stdin. Combined with -i or -I *input* becomes a single value per iteration.
-
-File names take precedence over subcommand names.
-Remaining arguments are bound to *command-line-args*.
-Use -- to separate script command line args from bb command line args.
-When no eval opts or subcommand is provided, the implicit subcommand is repl.
-----
+include::usage/help.adoc[]
 
 === Running a script
 
